<?xml version="1.0" encoding="utf-8"?>

<resources>

    <!-- Application générale -->
    <string name="app_name">Mini-Poll</string>
    <string name="app_next">Suivant</string>
    <string name="app_back">Précédent</string>
    <string name="app_modification">Modifier</string>
    <string name="app_confirmation">Confirmer</string>
    <string name="app_create">Créer</string>
    <string name="app_user_username">Identifiant</string>
    <string name="app_user_password">Mot de passe</string>
    <string name="app_user_surname">Nom</string>
    <string name="app_user_firstname">Prénom</string>
    <string name="app_user_mail">Adresse mail</string>
    <string name="app_user_bff">Meilleur ami</string>
    <string name="app_error"> Une erreur inattendue est survenue ! </string>
    <string name="app_logo"> Logo de l'application </string>

    <!-- Login et connexion -->
    <string name="login_title">Se connecter</string>
    <string name="login_create_account">Créer un compte</string>
    <string name="login_connection">Connexion</string>
    <string name="login_password_forgotten">Mot de passe oublié ?</string>
    <string name="login_password_forgotten_notification">Veuillez contacter l\'administrateur de l\'application afin d\'obtenir un nouvel accès à votre compte. </string>
    <string name="login_password_wrong">Votre mot de passe est incorrect</string>
    <string name="login_id_wrong">L\'identifiant soumis est incorrect</string>
    <string name="login_label">Login</string>

    <!-- Création d'un compte -->
    <string name="newAccount_title">Création d\'un compte</string>
    <string name="newAccount_confirmation_password">Confirmation du mot de passe</string>
    <string name="newAccount_error">Ce nom d\'utilisateur existe déjà! Veuillez en choisir un autre.</string>
    <string name="newAccount_notification">Le mot de passe n\'a pas été bien confirmé !</string>

    <!-- Création d'un profil -->
    <string name="create_title">Création d\'un profil</string>
    <string name="create_name">Nom*</string>
    <string name="create_firstname">Prénom*</string>
    <string name="create_mail">Adresse mail*</string>
    <string name="create_picture">Photo de profil</string>
    <string name="create_advice">* champs obligatoires</string>
    <string name="create_error">Veuillez remplir tous les champs obligatoires !</string>

    <!-- Menu principal (main) -->
    <string name="main_activity_title">Menu principal</string>
    <string name="main_activity_welcome_partie1">Bonjour </string>
    <string name="main_activity_welcome_partie2"> ! </string>
    <string name="main_activity_profile">Profil </string>
    <string name="main_activity_manage_friends">Gestion des amis </string>
    <string name="main_activity_agreement">Sondage par accord </string>
    <string name="main_activity_questionnary">Questionnaire </string>
    <string name="main_activity_help">Aide à un ami </string>
    <string name="main_activity_create">Créer un sondage </string>
    <string name="main_activity_offline">Se déconnecter </string>
    <string name="main_back_button_disable">Pour retournez en arrière, déconnectez-vous.</string>

    <!-- Profil -->
    <string name="my_profile_title">Mon profil</string>
    <string name="his_profile_title">Profil</string>
    <string name="my_profile_change_username">Changer d\'identifiant ?</string>
    <string name="my_profile_change_password">Changer de mot de passe ?</string>
    <string name="my_profile_id">Identifiant : </string>
    <string name="my_profile_mdp">Mot de passe : **********</string>
    <string name="my_profile_mail">Mail : </string>
    <string name="my_profile_nom">Nom : </string>
    <string name="my_profile_prenom">Prénom : </string>
    <string name="my_profile_bff">Meilleur ami : </string>
    <string name="my_profile_picture">Ma photo de profil </string>

    <!-- Modifier l'identifiant -->
    <string name="change_username_title">Changer d\'identifiant</string>
    <string name="change_username_new">Nouvel identifiant</string>
    <string name="change_username_confirmation">Confirmer avec le mot de passe</string>
    <string name="change_username_password_wrong">Le mot de passe est incorrect !</string>
    <string name="change_username_username_error">Cet identifiant est déjà utilisé ! Veuillez en choisir un autre.</string>

    <!-- Modifier le mot de passe -->
    <string name="change_password_title">Changer de mot de passe</string>
    <string name="change_password_new">Nouveau mot de passe</string>
    <string name="change_password_confirmation_new">Confirmer le nouveau mot de passe</string>
    <string name="change_password_confirmation_old">Confirmer avec l\'ancien mot de passe</string>
    <string name="change_password_confirmation_error">Le nouveau mot de passe n\'a pas été bien confirmé !</string>
    <string name="change_username_wrong">Le mot de passe est incorrect !</string>

    <!-- Gestion des amis -->
    <string name="friends_manage_title">Gestion des amis</string>
    <string name="friends_list">Liste d\'amis</string>
    <string name="friends_find">Trouver un ami</string>
    <string name="friends_mine">Profil de mon ami</string>
    <string name="friends_error_no_item">Aucun ami dans votre liste</string>
    <string name="friends_no_result">Aucun ami ne correspond à votre recherche</string>

    <string name="friends_manage_delete1">Êtes-vous sûr de vouloir supprimer </string>
    <string name="friends_manage_delete2"> de votre liste d\'amis ?</string>

    <!-- Gestion générale -->
    <string name="poll_manage_question_title">Question </string>
    <string name="poll_answer_title">Réponse</string>
    <string name="poll_results_title">Résultats</string>
    <string name="nothing_to_show">Aucun élément à afficher</string>
    <string name="poll_participants">Participants</string>

    <!-- Gestion des sondages -->
    <string name="surveys_manage_title">Sondages en cours</string>

    <string name="surveys_manage_answers_title">Propositions </string>

    <string name="surveys_manage_middleresults_title">Résultats intermédiaires</string>
    <string name="surveys_manage_middleresults_missing_answers">Réponses manquantes </string>
    <string name="surveys_manage_results_propositions">Proposition </string>

    <string name="surveys_manage_finalresults_title">Résultat final</string>
    <string name="surveys_manage_save">Enregistrer</string>

    <string name="surveys_manage_invalid_value">Un classement attribué a une valeur incorrecte.</string>
    <string name="surveys_manage_too_few_scores">Vous avez classé trop peu de possibilités. </string>
    <string name="surveys_manage_too_much_scores">Vous avez classé trop de possibilités.</string>
    <string name="surveys_manage_doublons">Vous avez attribué deux fois le même classement à une option.</string>

    <!-- Gestion des questionnaires -->
    <string name="questionnary_manage_title">Questionnaires en cours</string>
    <string name="questionnary_manage_title2">Questions</string>
    <string name="questionnary">Questionnaires en cours</string>
    <string name="questionnary_manage_results_title">Résultats</string>
    <string name="questionnary_manage_results_message">Vous occupez actuellement la place </string>
    <string name="questionnary_manage_results_ranking">Classement </string>
    <string name="deja_repondu_a_cette_question">Vous avez déjà donné une réponse à cette question </string>

    <!-- Gestion des demandes d'aide -->
    <string name="help_manage_title">Demandes d\'aide en cours</string>

    <string name="help_manage_question_title">Question de ton ami </string>
    <string name="help_manage_question_description1">Description 1 </string>
    <string name="help_manage_question_description2">Description 2 </string>

    <string name="help_choix">Je préfère ça ! </string>
    <string name="help_manage_choice_title">Votre choix</string>

    <!-- Création générale -->
    <string name="create_main_survey_title">Sondage par accord</string>
    <string name="create_main_questionnary_title">Questionnaire</string>
    <string name="create_main_help_title">Demande d\'aide à un ami</string>
    <string name="create_main_title">Création d\'une activité</string>
    <string name="create_next">Suivant</string>

    <string name="create_surveyORquestionnary_friends_title">Amis à sonder</string>
    <string name="create_help_friends_title">Choisissez un ami à sonder : </string>

    <string name="create_format_title">Choisissez le format du sondage : </string>
    <string name="create_format_picture">Image</string>
    <string name="create_format_text">Texte</string>

    <string name="create_resume_title">Résumé</string>

    <string name="create_next_element">+</string>
    <string name="remove_previous_element">-</string>
    <string name="create_send">Envoyer</string>

    <!-- Création de sondages -->
    <string name="create_survey_choice_title">Choix possibles</string>
    <string name="create_survey_choice_description">Choix </string>

    <string name="create_survey_choice_specifics_title">Détails du choix </string>
    <string name="create_survey_choice_specifics_picture">Ajouter une image </string>
    <string name="create_survey_choice_specifics_description">Description </string>

    <string name="create_survey_choice_order_title">Modifier l\'ordre</string>
    <string name="create_survey_choice_order_description">Choix </string>
    <string name="create_survey_choice_order_send">Envoyer le sondage</string>
    <string name="create_survey_number_choice">Nombre de choix à faire</string>
    <string name = "create_survey_add_friends">Choisissez les amis qui participeront au sondage</string>
    <string name = "create_survey_send">Choix des amis</string>
    <string name ="create_survey_error">Le nombre de choix possibles a une valeur incorrecte.</string>
    <string name="create_survey_error_duplicate">Deux options ou plus ont le même nom.</string>

    <!-- Création de questionnaires -->
    <string name="create_questionnary_questionsList_title">Liste des questions</string>

    <string name="create_questionnary_numberQuestions_title">Combien de questions voulez-vous poser ?</string>

    <string name="create_questionnary_picture_answers_title">Réponses pour la question </string>

    <string name="create_questionnary_rightAnswer_title">Réponse correcte à la question </string>

    <string name="create_questionnary_question_title">Question </string>

    <string name="create_questionnary_text_questions_list_title">Liste des questions</string>

    <string name="create_questionnary_text_answers_title">Réponse à la question</string>
    <string name="create_questionnary_text_answers_text">Réponse</string>

    <string name="create_questionnary_order_title">Visualisation de l\'ordre des questions</string>

    <!-- Création de demande d'aide -->
    <string name="create_description">Description </string>
    <string name="create_help_answers_title">Veuillez insérer les deux propositions : </string>
    <string name="create_help_answers_proposal">Proposition 1</string>
    <string name="create_help_answers_proposal2">Proposition 2</string>

    <string name="create_help_friend_chosen">Ami invité à t\'aider </string>
    <string name="create_help_proposal_error">Veuillez choisir deux propositions différentes ! </string>

</resources>
