<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="52dp"
        android:text="@string/change_username_title"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:text="@string/change_username_new"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="250dp"
        android:textSize="36sp"/>
    <TextView
        android:id="@+id/textView4"
        android:layout_width="800dp"
        android:layout_height="80dp"
        android:text="@string/change_username_confirmation"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="500dp"
        android:textSize="36sp"/>
</android.support.constraint.ConstraintLayout>