<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CreateHelpTxtLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lsinf1225.mini_poll.activity.CreationAideTxtActivity" >

    <EditText
        android:id="@+id/create_help_txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:hint="@string/create_description"
        android:imeActionLabel="@string/create_description"
        android:imeOptions="actionDone"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/create_help_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/create_help_answers_title"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintTop_toTopOf="@+id/create_help_txt_description" />

    <EditText
        android:id="@+id/create_help_txt_proposal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:hint="@string/create_help_answers_proposal"
        android:imeActionLabel="@string/create_help_answers_proposal"
        android:imeOptions="actionDone"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/create_help_txt" />

    <EditText
        android:id="@+id/create_help_txt_proposal2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:hint="@string/create_help_answers_proposal2"
        android:imeActionLabel="@string/create_help_answers_proposal2"
        android:imeOptions="actionDone"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/create_help_txt_proposal" />

    <Button
        android:id="@+id/create_help_txt_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:drawableEnd="@drawable/ic_go"
        android:drawableRight="@drawable/ic_go"
        android:onClick="next"
        android:text="@string/app_next"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_help_txt_proposal2" />

</android.support.constraint.ConstraintLayout>