<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createProfileLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lsinf1225.mini_poll.activity.CreationProfilActivity">

    <EditText
        android:id="@+id/create_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:hint="@string/create_name"
        android:imeActionId="6"
        android:imeActionLabel="@string/create_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/create_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/create_firstname"
        android:imeActionId="6"
        android:imeActionLabel="@string/create_firstname"
        android:imeOptions="actionDone"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_name" />

    <EditText
        android:id="@+id/create_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/create_mail"
        android:imeActionId="6"
        android:imeActionLabel="@string/create_mail"
        android:imeOptions="actionDone"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_firstname" />

    <Button
        android:id="@+id/create_next_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="16dp"
        android:layout_marginTop="112dp"
        android:drawableEnd="@drawable/ic_go"
        android:drawableRight="@drawable/ic_go"
        android:onClick="create"
        android:text="@string/app_next"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_mail" />

    <TextView
        android:id="@+id/create_advice"
        style="@style/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:text="@string/create_advice"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_next_btn" />

</android.support.constraint.ConstraintLayout>
