<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CreateHelpFriendLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lsinf1225.mini_poll.activity.CreationAideActivity" >

    <TextView
        android:id="@+id/create_help_friend_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="148dp"
        android:text="@string/create_help_friends_title"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="5dp" />

    <Spinner
        android:id="@+id/create_help_friend_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:prompt="@string/app_user_username"
        android:spinnerMode="dropdown"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_help_friend_txt" />

    <Button
        android:id="@+id/create_help_f_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="32dp"
        android:layout_marginTop="112dp"
        android:drawableEnd="@drawable/ic_go"
        android:drawableRight="@drawable/ic_go"
        android:onClick="next"
        android:text="@string/app_next"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_help_friend_spinner" />

</android.support.constraint.ConstraintLayout>